ProofRequest 처리 완료

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -62,6 +62,11 @@
             android:screenOrientation="portrait"
             tools:replace="screenOrientation" />
 
+        <activity
+            android:name=".activities.messageList.MessageListActivity"
+            android:screenOrientation="portrait"
+            tools:replace="screenOrientation" />
+
     </application>
 
 </manifest>
